# graph-dsl-2

./: CMakeLists.txt  README.md
include/graph-dsl/: Status.h
include/graph-dsl/core/: GraphContext.h
include/graph-dsl/core/dsl/: Graph.h  GraphNode.h  GraphPort.h  NodeIndex.h  SubGraph.h  SubGraphSelector.h
include/graph-dsl/core/dsl/detail/: GraphAnalyzer.h
include/graph-dsl/core/dsl/node_like/: NodeLikeEither.h  NodeLikeFork.h  NodeLikeMaybe.h  NodeLikeRef.h  NodeLikeTrait.h
include/graph-dsl/core/dsl/primitive/: GraphNodeMaybe.h  GraphNodeRef.h  GraphNodeTrait.h
include/graph-dsl/core/runtime/: DeviceInfo.h  NodeCb.h  RootState.h
include/graph-dsl/util/: Assertions.h  TupleElementIndex.h  TupleForEach.h
test/ut/: TestGraph.cpp  TestGraphNode.cpp  TestGraphNodeMaybe.cpp  TestGraphNodeRef.cpp  TestNodeLikeEither.cpp  TestNodeLikeFork.cpp  TestNodeLikeMaybe.cpp  TestNodeLikeRef.cpp  TestNodesLikeMerge.cpp  TestSubGraph.cpp
